ingress/config/ns-and-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
